--- a/ASSIGNMENTS/Assignment-1/index.html
+++ b/ASSIGNMENTS/Assignment-1/index.html
@@ -11,7 +11,7 @@
     <h2>My Bio Data</h2>
     <form action="#">
         <fieldset>
-            <legend>Personal Information</legend>
+            <legend>Personal information</legend>
             <label for="firstname">First Name:</label>
             <input type="text" id="firstname" placeholder="First Name">
             <label for="lastname">Last Name:</label>
